tasks append to DOM, added delete/edit buttons, added checkbox to mark complete

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,18 +21,7 @@
         </div>  
         <div class="taskList">
             <h1>Tasks: </h1>
-            <table>
-                <thead>
-                    <th>Task</th>
-                    <th>Status</th>
-                    <th>Complete</th>
-                </thead>
-                <tr>
-                    <td>Call Mom</td>
-                    <td>Incomplete</td>
-                    <td><input type="checkbox" class="markComplete"></td>
-                </tr>
-               
+            <table id="taskTable">
             </table>
         </div>
     </div>
