--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Task Manager</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="vendors/jquery.min.js"></script>
     <script src="scripts/client.js"></script>
     <link rel="stylesheet" href="styles/main.css">
@@ -10,17 +12,16 @@
 <body>
     <div class="container">
         <header>
-            <h1>Task Manager</h1>
+            <button id="addTask"><i class="far fa-plus-square"></i> Add Task</button>
         </header>
         <div class="newTaskForm">
             <form>
-                <h2>New Task</h2>
-                <p>[ task ]</p><input type="text" id="taskNameIn">
-                <button id="addTask">Add Task</button>
+                <input type="text" id="taskNameIn" placeholder="New Task">
+                <button id="submitTask">Submit</button>
+                <button id="exitForm">Cancel</button>
             </form>
         </div>  
         <div class="taskList">
-            <h1>Tasks: </h1>
             <table id="taskTable">
             </table>
         </div>
