filter tasks by category working

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,11 +18,6 @@
             <label>New Task</label><input type="text" id="taskNameIn" placeholder="What do you need to do?">
             <label>Category</label><select id="categoryIn">
                 <option value="None">(Select)</option>
-                <option value="Chores">Chores</option>
-                <option value="School">School</option>
-                <option value="Personal">Personal</option>
-                <option value="Work">Work</option>
-                <option value="Financial">Financial</option>
             </select>
             <label>Due Date</label><input type="date" id="dueDateIn">
             <div>
@@ -31,6 +26,10 @@
             </div>
         </form>  
         <div class="taskList">
+            <label>Filter </label>
+            <select id="filterCategory">
+                <option value="None">(Select)</option>
+            </select>            
             <table id="taskTable">
                 <thead>
                     <tr>
