--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,11 +15,20 @@
             <button id="addTask"><i class="far fa-plus-square"></i> Add Task</button>
         </header>
         <form class="newTaskForm">
-            <label>New Task</label><input type="text" id="taskNameIn" placeholder="What do you need to do?">
-            <label>Category</label><select id="categoryIn">
+            <label>New Task</label>
+            <input type="text" id="taskNameIn" placeholder="What do you need to do?">
+            <div class="selectCategory">
+                <label>Category</label>
+                <select id="categoryIn">
                 <option value="None">(Select)</option>
             </select>
-            <label>Due Date</label><input type="date" id="dueDateIn">
+            <button id="newCategory">New Category</button>
+            </div>
+            <div class="newCategoryForm">
+                <label>New Category</label><input type="text" id="newCategoryIn" placeholder=""></input>
+                <button id="addCategory">Add</button>
+           </div>
+            <br><label>Due Date</label><input type="date" id="dueDateIn">
             <div>
                 <button id="submitTask">Submit</button>
                 <button id="exitForm">Cancel</button>
