refactor code. separated event listeners out of ready function

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -41,6 +41,7 @@
         </form>
 
         <div class="manageCategories manage">
+            <input type="text" id="newCategoryIn" placeholder="Type your new category here."><br>
             <button id="addCategory" class="main-btn"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Category</button>
             <table class="categoryTable">
                 <thead>
